# FIXConnectivityCenter

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  health.html  index.html  main.go  messages.csv  output_messages.pb  send.html  send_template.csv  server.go  sessions.cfg  styles.css
additionaltools/FIX2JSON/: Cargo.toml  sampleFIX358.txt
additionaltools/FIX2JSON/src/: main.rs
additionaltools/FIXLogTagChecker/: Cargo.toml  README.md
additionaltools/FIXLogTagChecker/src/: main.rs
model/: message.pb.go  message.proto
src/: counterparty.rs  csv_send.rs  dict_defaults.rs  fix_app.rs  logger.rs  main.rs  metrics.rs  proto.rs  send.rs  testcounterparty.rs  web.rs
static/: health.html  index.html  parse.html  styles.css
tools/FIX2JSON/: README.md
