[package]
name = "fixstatus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fixstatus"
path = "src/main.rs"

[dependencies]
quickfix = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
sysinfo = "0.39.6"
